# pinetime-rust-mynewt

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .openocd_cmds  .rat-excludes  Cargo.toml  README.md  article-rustdoc-header.html  bluepill_my_sensor-sysinit-app.S  bme280spi.fzz  esp8266.fzz  infer.json  libmylib-demangle.S  libmylib.S  libmylib.elf  libs_mynewt_rust.S  mylib-e14a6038e75c8355.2vmgs9grk9b25wiv.rcgu.bc.z  mylib-e14a6038e75c8355.3ez56hdq55zucvtg.rcgu.bc.z  mynewt_rust.S  project.yml  workspace.code-workspace
.cargo/: config
.github/: FUNDING.yml
.github/workflows/: main.yml
apps/: README.md
apps/blinky/: pkg.yml
apps/boot_stub/: README.md  pkg.yml  syscfg.yml
apps/my_sensor_app/: README.md  blockly.xml  pkg.yml  syscfg.yml
compiler/riscv-none-embed/: README.md  compiler.yml  pkg.yml
doc/: chip8.html
doc/aligned/: all.html  fn.Aligned.html  struct.A16.html  struct.A8.html  struct.Aligned.html
doc/app/: all.html  fn.handle_touch.html  fn.main.html  fn.panic.html  index.html  sidebar-items.js
doc/arrayvec/: struct.IntoIter.html
doc/as_slice/: all.html  index.html  trait.AsMutSlice.html  trait.AsSlice.html
doc/bare_metal/: index.html  struct.CriticalSection.html  struct.Mutex.html
doc/byteorder/: index.html
doc/cortex_m/: macro.singleton.html
doc/cortex_m_rt/: all.html  attr.entry.html  attr.exception.html  attr.interrupt.html  attr.pre_init.html  fn.heap_start.html  struct.ExceptionFrame.html
doc/cstr_core/: index.html  sidebar-items.js  struct.CStr.html  struct.FromBytesWithNulError.html  type.c_char.html
doc/cty/: all.html  index.html  type.c_int.html  type.c_long.html  type.c_schar.html  type.c_short.html  type.c_uchar.html  type.c_ulonglong.html  type.c_ushort.html  type.int16_t.html  type.int64_t.html  type.intptr_t.html  type.ptrdiff_t.html  type.ssize_t.html  type.uint16_t.html  type.uint32_t.html  type.uint8_t.html  type.uintmax_t.html  type.uintptr_t.html
doc/druid/: enum.Event.html  enum.MouseButton.html  enum.WidgetType.html  enum.WindowType.html  fn.draw_to_display.html  struct.Affine.html  struct.AppLauncher.html  struct.BaseState.html  struct.BoxConstraints.html  struct.DruidContext.html  struct.EventCtx.html  struct.LayoutCtx.html  struct.LocalizedString.html  struct.MouseEvent.html  struct.PaintCtx.html  struct.PlatformWindowHandle.html  struct.Point.html  struct.Rect.html  struct.WidgetPod.html  struct.Window.html  struct.WindowBox.html  (+7 more)
docs/: aliases.js  index.md  normalize.css  prism.css  prism.js  search-index.js  source-files.js
libs/: README.md
logs/: README.md  bindings.rs  boot_stub.elf.lst  boot_stub.elf.map  cborencoder.h  gen-bindings.txt  json-expanded.h  libapp-demangle.S  libapp-expanded-cbor.rs  libapp-expanded-json.rs  libapp-expanded.rs  libapp.S  libapp.elf  libapp.json  libcompiler_builtins.S  libcore.S  libmylib-demangle.S  libmylib-expanded.rs  libmylib.S  libmylib.elf  libmylib.json  libmynewt-expanded.rs  my_sensor_app.elf.lst  my_sensor_app.elf.map  mynewt.elf.lst  mynewt.elf.map  os-expanded.h  platformio.S  rustlib-demangle.S  rustlib.S  send_coap-expanded.h  send_coap-expanded.rs  sensor_coap-expanded.h  sensor_network-expanded.h  tinycbor-expanded.h
macros/: Cargo.toml
macros/src/: lib.rs
newt/: README.md
patch/: README.md  bluepill.ld  bsp.yml  cbor.h  cty.rs  hal_uart.c  os_arch_rv32imac.c
rust/: Cargo.toml  README.md  libmylib.S  libmylib.elf  rust.code-workspace
rust/app/: Cargo.toml  README.md
rust/app/roms/: README.md  blinky.ch8
rust/app/src/: README.md  app_base.rs  app_network.rs  app_sensor.rs  ast.md  base.rs  bloc.md  chip8.md  chip8.rs  cloud.md  companion.md  custom.md  dfu.md  dfutest.md  display.rs  flutter.md  gotk3.md  gps_sensor.rs  handdrawn.md  hello.rs  lib.rs  listen_sensor.rs  mcuboot.md  micropython.md  mynewt_hal.rs  pinetime.md  send_coap.rs  simulator.md  spiflash.md  timesync.md  touch_sensor.rs  ui.rs  updater.md  visual.rs  watch_face.rs  watch_face.rs.old  watchface.md  wayland.md
rust/barebones-watchface/: Cargo.toml  README.md
rust/barebones-watchface/src/: lib.rs
rust/lvgl/: Cargo.toml  README.md
rust/lvgl/src/: core.rs  lib.rs  objx.rs  util.rs
rust/macros/: Cargo.toml  README.md
rust/macros/src/: README.md  infer_type.rs  lib.rs  safe_wrap.rs
rust/pinetime-lvgl/: Cargo.toml  README.md
rust/pinetime-lvgl/scripts/: gen-bindings.sh
rust/pinetime-lvgl/src/: console.rs  lib.rs  objx.rs  util.rs
rust/pinetime-lvgl/src/core/: obj.rs
rust/pinetime-lvgl/src/objx/: label.rs
rust/pinetime-macros/: Cargo.toml  README.md
rust/pinetime-macros/src/: README.md  lib.rs  safe_wrap.rs
rust/pinetime-mynewt/: Cargo.toml  README.md
rust/pinetime-mynewt/scripts/: gen-bindings.sh
rust/pinetime-mynewt/src/: hw.rs  kernel.rs  lib.rs  spi.rs  sys.rs  util.rs
rust/pinetime-mynewt/src/encoding/: macros.rs  tinycbor.rs
rust/pinetime-mynewt/src/hw/: hal.rs  sensor.rs
rust/pinetime-mynewt/src/hw/sensor/: bindings.rs
rust/pinetime-mynewt/src/kernel/: os.rs
rust/pinetime-mynewt/src/libs/: mynewt_rust.rs  sensor_network.rs
rust/pinetime-mynewt/src/sys/: console.rs
rust/pinetime-watchface/: Cargo.toml  README.md
rust/pinetime-watchface/src/: lib.rs
scripts/: Toolchain-cross-mingw32-linux.cmake  build-app.cmd  build-app.sh  build-rustlib.sh  build-windows.cmd  config.sh  debug.ocd  dev-install-mac.sh  dev-install-windows.sh  flash-app.ocd  flash-boot.ocd  flash-init.ocd  flash.ocd  gen-bindings-lvgl.sh  gen-bindings.sh  header.html  install-arm.sh  install-ext-linux.sh  install-ext-mac.sh  install-ext-windows.cmd  install-linux.sh  install-mac.sh  install-pi.sh  install-pinebook.sh  install-version.sh  install-windows-ext.cmd  install-windows.sh  package.sh  rustdoc-before.html  rustdoc-header.html  send-udp.js  uninstall-linux.sh  uninstall-windows.sh
src/: README.md  base.rs  lib.rs  liballoc-4c8e560daaa5fba7.rlib  libcompiler_builtins-26b11cd3df3b5c44.rlib  librustc_std_workspace_core-5a60e280b382f06e.rlib  listen_sensor.rs  macros.rs  mynewt.rs  send_coap.rs  sensor.rs  sensor_network.rs  tinycbor.rs
(+10201 files in other folders)
