# Define the Rust workspace, which contains all Rust projects

# All projects in the `rust` folder belong to this workspace
[workspace]
members = [
    "rust/app",
    "rust/macros",
    "rust/mynewt"
]

# Options for `cargo build`
[profile.dev]
panic         = "abort"     # Disable stack unwinding on panic
codegen-units = 1           # Better optimizations
lto           = true        # Optimize linker by removing dead code

# Options for `cargo build --release`
[profile.release]
debug         = true        # Symbols are nice and they don't increase the size on Flash
panic         = "abort"     # Disable stack unwinding on panic
codegen-units = 1           # Better optimizations
lto           = true        # Optimize linker by removing dead code
opt-level     = 'z'         # Optimize for size
