# Info about this package.
[package]
authors = ["Lee Lup Yuen <luppy@appkaki.com>"]
edition = "2018"
readme  = "README.md"
name    = "app"
version = "1.0.2"

# External Rust libraries used by this module.  See crates.io.
[dependencies]
pinetime-macros     = "1.0.2"  # Safe Wrapper Macros for Mynewt on PineTime Smart Watch: https://crates.io/crates/pinetime-macros
pinetime-mynewt     = "1.0.2"  # Mynewt Bindings for PineTime Smart Watch: https://crates.io/crates/pinetime-mynewt
pinetime-lvgl       = "1.0.2"  # LVGL Bindings for Mynewt on PineTime Smart Watch: https://crates.io/crates/pinetime-lvgl
pinetime-watchface  = "1.0.2"  # Watch Face Framework for Rust + Mynewt on PineTime Smart Watch: https://crates.io/crates/pinetime-watchface
barebones-watchface = "1.0.2"  # Barebones Watch Face for Rust + Mynewt on PineTime Smart Watch: https://crates.io/crates/barebones-watchface
arrayvec            = { version = "0.5.1", default-features = false }
embedded-hal        = "0.2.3" # Rust Embedded HAL Framework
cortex-m            = { version = "0.6.1", features = [ "inline-asm" ] }  # Arm Cortex-M utilities: https://crates.io/crates/cortex-m
cstr_core           = "0.1.2"  # String utilities from cstr_core library: https://crates.io/crates/cstr_core
cty                 = "0.2.0"  # String utilities from cty library: https://crates.io/crates/cty
heapless            = "0.5.1" # `static` friendly data structures that don't require dynamic memory allocation
memchr              = { version = "2", default-features = false } # String search. Reduce the ROM size by disabling default features. See https://github.com/BurntSushi/rust-memchr

# Build this module as a Rust library, not a Rust application.  We will link this library with the Mynewt executable.
[lib]
name       = "app"  # Output will be named `libapp.rlib`
test       = false
bench      = false
crate-type = ["staticlib"]

# Optional features
[features]
default =  [          # Select the conditional compiled features
]