# Info about this package.
[package]
authors = ["Lee Lup Yuen <luppy@appkaki.com>"]
edition = "2018"
readme  = "README.md"
name    = "app"
version = "2.1.1"

# External Rust libraries used by this module.  See crates.io.
[dependencies]
pinetime-macros       = "2.0.0"  # Safe Wrapper Macros for Mynewt on PineTime Smart Watch: https://crates.io/crates/pinetime-macros
# pinetime-macros     = { path = "../../../pinetime-macros" }  # For development only
pinetime-mynewt       = "2.0.0"  # Mynewt Bindings for PineTime Smart Watch: https://crates.io/crates/pinetime-mynewt
# pinetime-mynewt     = { path = "../../../pinetime-mynewt" }  # For development only
pinetime-lvgl         = "2.0.1"  # LVGL Bindings for Mynewt on PineTime Smart Watch: https://crates.io/crates/pinetime-lvgl
# pinetime-lvgl       = { path = "../../../pinetime-lvgl" }  # For development only
pinetime-watchface    = "2.1.1"  # Watch Face Framework for Rust + Mynewt on PineTime Smart Watch: https://crates.io/crates/pinetime-watchface
# pinetime-watchface  = { path = "../../../pinetime-watchface" }  # For development only
barebones-watchface   = "2.1.1"  # Barebones Watch Face for Rust + Mynewt on PineTime Smart Watch: https://crates.io/crates/barebones-watchface
# barebones-watchface = { path = "../../../barebones-watchface" }  # For development only
# handdrawn-watchface = { path = "../../../handdrawn-watchface" }  # For development only
arrayvec              = { version = "0.5.1", default-features = false }
embedded-hal          = "0.2.3" # Rust Embedded HAL Framework
cortex-m              = { version = "0.6.1", features = [ "inline-asm" ] }  # Arm Cortex-M utilities: https://crates.io/crates/cortex-m
cstr_core             = "0.1.2"  # String utilities from cstr_core library: https://crates.io/crates/cstr_core
cty                   = "0.2.0"  # String utilities from cty library: https://crates.io/crates/cty
heapless              = "0.5.1" # `static` friendly data structures that don't require dynamic memory allocation
memchr                = { version = "2", default-features = false } # String search. Reduce the ROM size by disabling default features. See https://github.com/BurntSushi/rust-memchr

# Build this module as a Rust library, not a Rust application.  We will link this library with the Mynewt executable.
[lib]
name       = "app"  # Output will be named `libapp.rlib`
test       = false
bench      = false
crate-type = ["staticlib"]

# Optional features
[features]
default =  [          # Select the conditional compiled features
]
