# Info about this package.
[package]
name          = "barebones-watchface"
version       = "0.3.0"
authors       = ["Lee Lup Yuen <luppy@appkaki.com>"]
edition       = "2018"
description   = "Barebones Watch Face for Mynewt on PineTime Smart Watch"
repository    = "https://github.com/lupyuen/barebones-watchface"
documentation = "https://github.com/lupyuen/barebones-watchface"
categories    = ["embedded", "no-std"]
keywords      = ["pinetime", "mynewt", "watchface", "barebones"]
readme        = "./README.md"
license       = "Apache-2.0"

# External Rust libraries used by this module.  See crates.io.
[dependencies]
pinetime-lvgl      = { path = "../pinetime-lvgl" }   # Import path `../pinetime-lvgl` as lvgl library
pinetime-macros    = { path = "../pinetime-macros" } # Import path `../pinetime-macros` as macros library
pinetime-mynewt    = { path = "../pinetime-mynewt" } # Import path `../pinetime-mynewt` as mynewt library
pinetime-watchface = { path = "../pinetime-watchface" } # Import path `../pinetime-watchface` as watchface library
arrayvec           = { version = "0.5.1", default-features = false }
cortex-m           = { version = "0.6.1", features = [ "inline-asm" ] }  # Arm Cortex-M utilities: https://crates.io/crates/cortex-m
cstr_core          = "0.1.2"  # String utilities from cstr_core library: https://crates.io/crates/cstr_core
cty                = "0.2.0"  # String utilities from cty library: https://crates.io/crates/cty
embedded-hal       = "0.2.3" # Rust Embedded HAL Framework
heapless           = "0.5.1" # `static` friendly data structures that don't require dynamic memory allocation
memchr             = { version = "2", default-features = false } # String search. Reduce the ROM size by disabling default features. See https://github.com/BurntSushi/rust-memchr

# Build this module as a Rust library, not a Rust application
[lib]
test       = false
bench      = false