# Info about this package.
[package]
name          = "pinetime-watchface"
version       = "0.3.0"
authors       = ["Lee Lup Yuen <luppy@appkaki.com>"]
edition       = "2018"
description   = "Watch Face Framework for Mynewt on PineTime Smart Watch"
repository    = "https://github.com/lupyuen/pinetime-watchface"
documentation = "https://github.com/lupyuen/pinetime-watchface"
categories    = ["embedded", "no-std"]
keywords      = ["pinetime", "mynewt", "watchface"]
readme        = "./README.md"
license       = "Apache-2.0"

# External Rust libraries used by this module.  See crates.io.
[dependencies]
pinetime-macros = "0.4.0"  # Safe Wrapper Macros for Mynewt on PineTime Smart Watch: https://crates.io/crates/pinetime-macros
pinetime-mynewt = "0.2.0"  # Mynewt Bindings for PineTime Smart Watch: https://crates.io/crates/pinetime-mynewt
pinetime-lvgl   = "0.4.0"  # LVGL Bindings for Mynewt on PineTime Smart Watch: https://crates.io/crates/pinetime-lvgl
arrayvec        = { version = "0.5.1", default-features = false }
cortex-m        = { version = "0.6.1", features = [ "inline-asm" ] }  # Arm Cortex-M utilities: https://crates.io/crates/cortex-m
cstr_core       = "0.1.2"  # String utilities from cstr_core library: https://crates.io/crates/cstr_core
cty             = "0.2.0"  # String utilities from cty library: https://crates.io/crates/cty
embedded-hal    = "0.2.3" # Rust Embedded HAL Framework
heapless        = "0.5.1" # `static` friendly data structures that don't require dynamic memory allocation
memchr          = { version = "2", default-features = false } # String search. Reduce the ROM size by disabling default features. See https://github.com/BurntSushi/rust-memchr

# Build this module as a Rust library, not a Rust application
[lib]
name       = "watchface"  # Output will be named `libwatchface.rlib`
test       = false
bench      = false

# Optional features
[features]
default =  [          # Select the conditional compiled features
]